--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Coffee Shop</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo.png" alt="Coffee shop logo">
+        <img src="./assets/images/logo.png" alt="Coffee shop logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -628,7 +629,7 @@
 
   <!--Footer-->
   <footer class="text-center bg-dark p-5 mt-5 text-light">
-    <img width="80px" src="/assets/images/logo.png" alt="Logo Coffee Shop">
+    <img width="80px" src="./assets/images/logo.png" alt="Logo Coffee Shop">
     <p class="mt-3 fw-bold">
       Coffee Shop | Transforming your life with coffee
     </p>
